# btc-trader

./: .env  .gitignore  bybit_client.py  database.py  docker-compose.yml  environment.yml  fetch_data.py  main.py  ml_model.py  online_learner.py  requirements.txt  strategy.py  test_connection.py  trader.py  trading_bot.py
Inverse-btc-trader/: Dockerfile  Dockerfile.gpu  backfill_candles.py  docker-compose.yml  main.py  requirements.txt  reset_database.py
MACD Bot/: docker-compose.yml
MEXC-Inverse-btc-trader/: requirements.txt  reset_database.py
MM-Bot/: .gitignore  main.py
Mean reversion/: backfill_candles.py  pyproject.toml
Mean reversion/app/: init.py
Mean reversion/app/core/: bybit_client.py
Mean reversion/app/debug/: startup_check.py
Mean reversion/app/services/: candle_service.py  trade_service.py
Mean reversion/docker/: docker-compose.yml
Mean reversion/scripts/: live_tuner.py
Multi-Inverse-trader/: backfill_candles.py  main.py  reset_database.py
btc-trader/: .gitignore  docker-compose.yml  dockerfile  lstm_model.h5  main.py  requirements.txt  reset_database.py
btc-trader - Backup/: .gitignore  requirements.txt
eth-trader/: .env  Dockerfile  config.py  database.py  docker-compose.yml  indicators.py  logger.py  ml_model.py  model_service.py  requirements.txt  trading_bot.py  train_model.py
mean_reversion_bot/: .env  .gitignore  best_params_by_symbol.json  main.py
mean_reversion_bot - Copy/: docker-compose.dev.yml  docker-compose.yml
v2-Inverse-btc-trader/: Dockerfile  docker-compose.yml
v3-Inverse-btc-trader/: .gitignore  main.py  (+5 more)
(+132 files in other folders)
